Revert "refactor(municipal-services): resolve static analysis issues and technical debt  Conducted a comprehensive technical debt elimination sweep across core municipal microservices including request-service, verification-service, tp-services, and street-vending. Addressed multiple SonarQube quality and maintainability rules while preserving system stability.  Key Modifications: - Standardized duplicate string literals into private static final constants. - Resolved RowMapper nullability contract conflicts with target framework rules. - Streamlined complex conditional control flows into clean early-exit structures. - Updated raw generic type mappings and added required private constructors to utility classes. - Suppressed legacy date API rules where underlying framework or database serialization requirements dictated keeping the existing type signatures.  All service modules compile cleanly with zero regressions to business logic, validations, or API contracts."
This reverts commit 7814a10404b1f7d65235b5e44cd3078ab261c6aa.