@@ -1,8 +1,10 @@
 package org.egov.ndc.util;
 
 import java.util.*;
+import java.util.stream.Collectors;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
+import org.apache.commons.lang3.StringUtils;
 import org.egov.common.contract.request.RequestInfo;
 import org.egov.mdms.model.MasterDetail;
 import org.egov.mdms.model.MdmsCriteria;
@@ -10,11 +12,16 @@ import org.egov.mdms.model.MdmsCriteriaReq;
 import org.egov.mdms.model.ModuleDetail;
 import org.egov.ndc.config.NDCConfiguration;
 import org.egov.ndc.repository.ServiceRequestRepository;
+import org.egov.ndc.web.model.AuditDetails;
 import org.egov.ndc.web.model.idgen.IdGenerationRequest;
 import org.egov.ndc.web.model.idgen.IdGenerationResponse;
 import org.egov.ndc.web.model.idgen.IdRequest;
 import org.egov.ndc.web.model.idgen.IdResponse;
+import org.egov.ndc.web.model.ndc.NdcApplicationRequest;
+import org.egov.ndc.web.model.workflow.BusinessService;
+import org.egov.ndc.workflow.WorkflowService;
 import org.egov.tracer.model.CustomException;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Component;
 import org.springframework.util.CollectionUtils;
@@ -22,9 +29,7 @@ import org.springframework.util.CollectionUtils;
 @Component
 public class NDCUtil {
 
-	private final NDCConfiguration config;
-	private final ObjectMapper mapper;
-	private final ServiceRequestRepository serviceRequestRepository;
+	private NDCConfiguration config;
 
 	@Value("${egov.idgen.host}")
 	private String idGenHost;
@@ -32,12 +37,20 @@ public class NDCUtil {
 	@Value("${egov.idgen.path}")
 	private String idGenPath;
 
-	public NDCUtil(NDCConfiguration config, ObjectMapper mapper, ServiceRequestRepository serviceRequestRepository) {
-		this.config = config;
-		this.mapper = mapper;
-		this.serviceRequestRepository = serviceRequestRepository;
-	}
+	@Autowired
+	private ObjectMapper mapper;
 
+	@Autowired
+	private ServiceRequestRepository serviceRequestRepository;
+
+	private WorkflowService workflowService;
+
+	@Autowired
+	public NDCUtil(NDCConfiguration config, ServiceRequestRepository serviceRequestRepository, WorkflowService workflowService) {
+		this.config = config;
+		this.serviceRequestRepository = serviceRequestRepository;
+		this.workflowService = workflowService;
+	}
 	/**
 	 * Returns the URL for MDMS search end point
 	 *
@@ -61,8 +74,9 @@ public class NDCUtil {
 
 		MdmsCriteria mdmsCriteria = MdmsCriteria.builder().moduleDetails(moduleDetails).tenantId(tenantId).build();
 
-		return MdmsCriteriaReq.builder().mdmsCriteria(mdmsCriteria).requestInfo(requestInfo)
+		MdmsCriteriaReq mdmsCriteriaReq = MdmsCriteriaReq.builder().mdmsCriteria(mdmsCriteria).requestInfo(requestInfo)
 				.build();
+		return mdmsCriteriaReq;
 	}
 	/**
 	 * fetches the ndc documentTypes and ndcTypes mdms data
@@ -103,6 +117,6 @@ public class NDCUtil {
 		if (CollectionUtils.isEmpty(idResponses))
 			throw new CustomException("IDGEN ERROR", "No ids returned from idgen Service");
 
-		return idResponses.stream().map(IdResponse::getId).toList();
+		return idResponses.stream().map(IdResponse::getId).collect(Collectors.toList());
 	}
 }
