@@ -2,9 +2,11 @@ package org.upyog.rs.util;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import org.egov.common.contract.request.RequestInfo;
 import org.egov.tracer.model.CustomException;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Component;
 import org.springframework.util.CollectionUtils;
@@ -26,14 +28,11 @@ public class IdgenUtil {
     @Value("${egov.idgen.path}")
     private String idGenPath;
 
-    private final ObjectMapper mapper;
+    @Autowired
+    private ObjectMapper mapper;
 
-    private final ServiceRequestRepository restRepo;
-
-    public IdgenUtil(ObjectMapper mapper, ServiceRequestRepository restRepo) {
-        this.mapper = mapper;
-        this.restRepo = restRepo;
-    }
+    @Autowired
+    private ServiceRequestRepository restRepo;
 
     public List<String> getIdList(RequestInfo requestInfo, String tenantId, String idName, String idformat, Integer count) {
         List<IdRequest> reqList = new ArrayList<>();
@@ -50,6 +49,6 @@ public class IdgenUtil {
         if (CollectionUtils.isEmpty(idResponses))
             throw new CustomException("IDGEN ERROR", "No ids returned from idgen Service");
 
-        return idResponses.stream().map(IdResponse::getId).toList();
+        return idResponses.stream().map(IdResponse::getId).collect(Collectors.toList());
     }
 }
