@@ -7,6 +7,7 @@ import digit.models.coremodels.IdRequest;
 import digit.models.coremodels.IdResponse;
 import org.egov.common.contract.request.RequestInfo;
 import org.egov.tracer.model.CustomException;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Component;
 import org.springframework.util.CollectionUtils;
@@ -14,6 +15,7 @@ import org.upyog.sv.repository.ServiceRequestRepository;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Component
 public class IdgenUtil {
@@ -24,14 +26,11 @@ public class IdgenUtil {
     @Value("${egov.idgen.path}")
     private String idGenPath;
 
-    private final ObjectMapper mapper;
+    @Autowired
+    private ObjectMapper mapper;
 
-    private final ServiceRequestRepository restRepo;
-
-    public IdgenUtil(ObjectMapper mapper, ServiceRequestRepository restRepo) {
-        this.mapper = mapper;
-        this.restRepo = restRepo;
-    }
+    @Autowired
+    private ServiceRequestRepository restRepo;
 
     public List<String> getIdList(RequestInfo requestInfo, String tenantId, String idName, String idformat, Integer count) {
         List<IdRequest> reqList = new ArrayList<>();
@@ -48,6 +47,6 @@ public class IdgenUtil {
         if (CollectionUtils.isEmpty(idResponses))
             throw new CustomException("IDGEN ERROR", "No ids returned from idgen Service");
 
-        return idResponses.stream().map(IdResponse::getId).toList();
+        return idResponses.stream().map(IdResponse::getId).collect(Collectors.toList());
     }
 }
